# ghc-dot-app

./: .gitignore  .travis.yml  LICENSE  Main.hs  Makefile  README.md  ghc-dot-app.cabal  stack.yaml
GHC/GHC/: GHC-Info.plist  GHCAppDelegate.h  GHCAppDelegate.m  main.m  read_environment.sh
GHC/GHC.xcodeproj/: project.pbxproj
GHC/GHC/Base.lproj/: MainMenu.xib
GHC/GHC/html/: index.html  main.css  main.js  main.jsx
GHC/GHCTests/: GHCTests-Info.plist  GHCTests.m
GHCDotApp.xcworkspace/: contents.xcworkspacedata
GHCDotApp.xcworkspace/xcshareddata/: GHCDotApp.xccheckout
Haskell.sketch/: Data  metadata
logo/: Main.hs  README.md
