name:                ghc-dot-app
version:             7.10.3-r0
synopsis:            Mac OS X wrapper for GHC installation
description:         Please see README.md
homepage:            https://github.com/ghcformacosx/ghc-dot-app
license:             BSD3
license-file:        LICENSE
author:              Bob Ippolito
maintainer:          bob@redivi.com
category:            Development
build-type:          Simple
cabal-version:       >=1.10

executable main
  hs-source-dirs:      .
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , text
                     , directory
                     , filepath
                     , process
                     , unix
                     , bytestring
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ghcformacosx/ghc-dot-app
